# devilsmachine

./: .gitignore  CMakeLists.txt  README.rst  setup.py
cmake/Modules/: devilsmachine.cmake
devilsmachine/: __init__.py  __main__.py  args.py  colladaparser.py  configdata.py  configparser.py  data.py  filebuilder.py  impl.py  machine.py  module.py  vertex.py
devilsmachine/stockmodules/: __init__.py  glsl.py
